--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   json_theme: ^5.0.2+4
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
